--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 asgiref==3.8.1
 Django==5.1.5
 djangorestframework==3.15.2
-flake8==7.1.1
+djangorestframework_simplejwt==5.4.0
 mccabe==0.7.0
 pycodestyle==2.12.1
 pyflakes==3.2.0
+PyJWT==2.10.1
 sqlparse==0.5.3
